--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.17.1",
     "http": "^0.0.1-security",
     "quasar": "^2.6.0",
+    "uuid": "^9.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.1.6"
   },
