--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "firebase": "^9.17.1",
     "http": "^0.0.1-security",
+    "pinia": "^2.0.30",
     "quasar": "^2.6.0",
     "uuid": "^9.0.0",
     "vue": "^3.0.0",
